Update on Overleaf.

--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -900,7 +900,7 @@ The Intel compilers we tested would occasionally emit a stack trace upon crashin
   \label{lst:intel-passes}
 \end{figure}
 
-CLSmith produced many \textbf{bto} results across 13 Testbeds. Given the large kernel size, it is unclear how many of those are indefinite loops or simply a result of slow compilation of large kernels. The average size of CLSmith bto kernels is XX lines. DeepSmith caused  bto results is XX lines, allowing for rapid identification of the underlying problem.
+CLSmith produced many \textbf{bto} results across 13 Testbeds. Given the large kernel size, it is unclear how many of those are indefinite loops or simply a result of slow compilation of large kernels. The average size of CLSmith bto kernels is XX lines. DeepSmith produced \textbf{bto} results across 11  bto results is XX lines, allowing for rapid identification of the underlying problem.
 
 CLSmith test case compilation timed out (\textbf{bto}) in 13 testbeds, DeepSmith in 11. The CLSmith kernel which caused a build timeout is XX lines long. Automated test case reduction of programs with very long or indefinite compile times may be prohibitively expensive.
 
