--- a/sec/methodology.tex
+++ b/sec/methodology.tex
@@ -21,7 +21,7 @@ We conducted testing of 10 OpenCL systems, summarized in Table~\ref{tab:platform
 For each OpenCL system, we create two testbeds. In the first, the compiler is run without optimization. In the second, optimizations are enabled. Each testbed is then a triple, consisting of \emph{<device, driver, is\_optimized>} settings. This mechanism gives 20 testbeds to evaluate.
 
 \subsection{Test Cases}
-For each generated program we create inputs as described in Section~\ref{sec:test-harness}. In addition, we need to chose the number of threads to use. We generate two test cases, one using one thread, the other using 2048 threads. A test case is then a triple, consisting of \emph{<program, inputs, threads>} settings.
+For each generated program we create inputs as described in Section~\ref{sec:test-harness}. In addition, we need to choose the number of threads to use. We generate two test cases, one using one thread, the other using 2048 threads. A test case is then a triple, consisting of \emph{<program, inputs, threads>} settings.
 
 \subsection{Bug Search Time Allowance}
 We compare both our fuzzer and CLSmith. We allow both to run for 48 hours on each of the 20 testbeds.  CLSmith used its default configuration. The total runtime for a test case consists of the generation and execution time.
