--- a/sec/deepsmith.tex
+++ b/sec/deepsmith.tex
@@ -128,7 +128,7 @@ An \emph{anomalous wrong-output} occurs if, for a given test case, the majority 
 % \paragraph{Design Trade-Offs}
 %Our sequence-to-sequence approach to program generation greatly simplifies the implementation --- targeting a new language requires only a corpus of example programs and a test harness for generated codes. The generative model itself contains no language-specific code, and is implemented in less than 200 lines of Python --- a small fraction of that of prior approaches. The trade-off of this makes significantly reduces the cost of development, but we provide no guarantees on generated program correctness. \cc{not well formed, not well typed, and not free from undefined behavior}
 
-\subsection{False Positives for Anomalous Results}\label{subsec:discussions}
+\subsection{False Positives for Anomalous Wrong-output}\label{subsec:discussions}
 \hl{Generated programs may contain undefined or non-deterministic behavior which will incorrectly be labeled as anomalous. CSmith circumvents this problem mostly by not generating such code in the first place and performing certain static and dynamic analyses during generation to filter out the more complex cases. Although similar analyses could be created as filters for our system, we take a simpler approach, filtering only the few types of non-deterministic behavior we have actually observed. 
 
 We filter data races and out-of-bounds accesses with GPUverify~\cite{Betts2012} and Oclgrind. Some compiler warnings provide strong indication of non-deterministic behavior (e.g. comparison between pointer and integer) -- we check for these warnings and filter accordingly.
