--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -988,7 +988,7 @@ CLSmith generated 33 programs with wrong-outputs. DeepSmith generated 30. Over t
 \item CLSmith generated 3800 silent build crashes. CLgen generated 1023 silent build crashes. Lets ignore these, since we can't be sure of the cause.
 \item CLSmith triggered 2 distinct compiler assertions. DeepSmith triggered 31.
 \item CLSmith triggered 0 distinct compiler ``unreachable'' errors. DeepSmith triggered 3.
-\item CLSmith triggered 4 distinct stackdumps (all from Intel passes). DeepSmith triggered 11 (10 from Intel passes, and multiple parser crashes).
+\item CLSmith triggered 4 distinct stack dumps (all from Intel passes). DeepSmith triggered 11 (10 from Intel passes, and multiple parser crashes).
 \item CLSmith triggered 2 distinct crashes. DeepSmith triggered 2. Both produced silent crashes where we can't be sure of the cause.
 \item \cc{TODO: build timeouts}
 % CLSmith: 60
@@ -1004,7 +1004,7 @@ Hard to quantify, but our results suggest the value of our approach.
 % 331
 CLSmith is biased towards identifying struct miscompilations, though only 7.1\% of OpenCL kernels on GitHub use them. \cc{is this supported in the data?}
 
-Our approach is biased towards identifying bugs in compiler front-ends, since not all generated programms are well formed/well typed. Results suggest we cover more areas of the compiler, E.g. compiler crashes, compiler timeouts, etc.
+Our approach is biased towards identifying bugs in compiler front-ends, since not all generated programs are well formed/well typed. Results suggest we cover more areas of the compiler, E.g. compiler crashes, compiler timeouts, etc.
 
 Oclgrind was resilient to CLSmith testing, yet we identify both compile-time and runtime defects.
 
@@ -1042,10 +1042,10 @@ Overall, CLSmith is better at finding miscompilations. We believe our approach t
 \subsection{Compiler Stability over Time}%
 % \label{subsec:clangs}
 
-Clang front-ends are common across many compilers, which in turn causes Clang-related bugs to affect multiple compiler, for example the one in Figure~\ref{lst:almost-everything-crash}. To evaluate this impact of Clang, we used debug+assert builds of every LLVM release in the past 24 months and processed 75,000 DeepSmith kernels through the Clang front-end (no code generation, just lexer, parser, and typechecker).
+Clang front-ends are common across many compilers, which in turn causes Clang-related bugs to affect multiple compiler, for example the one in Figure~\ref{lst:almost-everything-crash}. To evaluate this impact of Clang, we used debug+assert builds of every LLVM release in the past 24 months and processed 75,000 DeepSmith kernels through the Clang front-end (no code generation, just lexer, parser, and type checker).
 
 Figure~\ref{fig:clangs} shows that the crash rate of Clang front-ends is almost steadily decreasing over time. The number of failing DeepSmith kernels decreased tenfold between 3.6.2 and 6.0.0. \cc{Does that suggest that DeepSmith is finding bugs which developers are interested in fixing?} \pp{We do find interesting bugs, but the important question is whether we are more likely to find interesting bugs than CLSmith.}
-Table~\ref{tab:clangs} shows the 7 distinct assertions triggered during this experiment. Assertion 1 (uncorrected typos) is raised on all compiler versions --- see Figure~\ref{lst:oclgrind-uncorrected-typos} for an example. This shows that compiler validation is a moving target. Release 6.0.0 has the second lowest crash rate, but is joint first in terms of the number of unique assertions. Assertions 3 and 4 where triggered by some kernels under version 6.0.0 but not under any other tested Clang version. This indicates that changes introduced in the latested version of Clang were not sufficiently tested.  %Neither metric is perfect.
+Table~\ref{tab:clangs} shows the 7 distinct assertions triggered during this experiment. Assertion 1 (uncorrected typos) is raised on all compiler versions --- see Figure~\ref{lst:oclgrind-uncorrected-typos} for an example. This shows that compiler validation is a moving target. Release 6.0.0 has the second lowest crash rate, but is joint first in terms of the number of unique assertions. Assertions 3 and 4 where triggered by some kernels under version 6.0.0 but not under any other tested Clang version. This indicates that changes introduced in the latest version of Clang were not sufficiently tested.  %Neither metric is perfect.
 
 TODO: Report the 5 distinct crashes in LLVM trunk.
 
