Update on Overleaf.

--- a/sec/methodology.tex
+++ b/sec/methodology.tex
@@ -10,7 +10,7 @@ In this section we describe the particular experimental parameters used.
   % \rowcolors{2}{white}{gray!25}
   \input{build/tab/platforms}
   \caption{%
-    OpenCL systems, the time spent in automated testing, and the number of bug reports submitted to date. \cc{refresh bugs submitted}%
+    OpenCL systems, the time spent in automated testing, and the number of bug reports submitted to date. \hl{For each system, two testbeds are created, one with compiler optimizations, the other without.} \cc{refresh bugs submitted}%
   }
   \label{tab:platforms}
 \end{table*}
