--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -614,6 +614,7 @@ examples is that the model learned to occasionally generate compiler-specific co
 \paragraph{Parser Failures} %
 Parser development is a mature and well understood practice. We uncovered parser errors in several compilers. Each of the following three code samples induce crash errors during parsing of compound statements in both Testbeds $5\pm$ and $7\pm$:
 
+\hl{Should be as figures?}
 \begin{enumerate}
 % Hand reduction of a 40 line kernel:
 \item \texttt{void A() \{ (global a*)()}
@@ -622,6 +623,7 @@ Parser development is a mature and well understood practice. We uncovered parser
 % 68 line kernel:
 \item \texttt{void A() \{ double2 k; return (float4)(k, k, k, k)}
 \end{enumerate}
+}
 
 The code fragments were hand-reduced from 40, 52, and 68 line DeepSmith samples, respectively. It took about 10 minutes to perform all three reductions by hand, producing these minimal code samples which we have reported to Intel. In total, we have generated 100 distinct programs which crash compilers during parsing.
 
@@ -648,7 +650,7 @@ The code fragments were hand-reduced from 40, 52, and 68 line DeepSmith samples,
 \end{figure}
 
 \paragraph{Compiler Hangs} %
-As expected, some compiler crashes are optimization sensitive. Testbeds $1+$ and $2+$ hang on large loop bounds, shown in Figure~\ref{lst:nvidia-opt-loop-hang} \cc{how large does the loop bound have to be?}. All commercial Intel compilers we tested hang during optimization of non-terminating loops (Figure~\ref{lst:intel-inf-loop}).
+As expected, some compiler behavior is optimization sensitive. Testbeds $1+$ and $2+$ hang on large loop bounds, shown in Figure~\ref{lst:nvidia-opt-loop-hang} \cc{how large does the loop bound have to be?}. All commercial Intel compilers we tested hang during optimization of non-terminating loops (Figure~\ref{lst:intel-inf-loop}).
 
 Testbed $7\pm$, bizarrely, loops indefinitely during compilation of the simple kernel in Figure~\ref{lst:xeon-phi-spin}.
 
